Add basic style for home page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="favicon.ico" rel="favicon">
         <link href="assets/css/style.css" rel="stylesheet">
         <title>KC</title>
     </head>
     <body>
         <header>
             <nav>
-                
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </nav>
         </header>
+        <section>
+            sdjflsdj
+        </section>
+        <footer>
+            <ul>
+                <li><a href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a></li>
+                <li><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
+            </ul>
+        </footer>
+
+            <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
     </body>
 </html>
