--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     </head>
     <body>
         <header>
+            <span><a class="main-logo" href="index.html">KC</a></span>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li></li>
+                    <li><a href="#">Blog</a></li>
                     <li></li>
                     <li></li>
                 </ul>
             </nav>
         </header>
-        <section>
-            sdjflsdj
-        </section>
+        <main id="landing-page">
+            <div></div>
+            <div></div>
+        </main>
         <footer>
             <ul>
                 <li><a href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a></li>
