--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     </head>
     <body>
         <header>
-            <span><a class="main-logo" href="index.html">KC</a></span>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li></li>
-                    <li></li>
+                    <li>Link</li>
                 </ul>
             </nav>
         </header>
@@ -23,11 +18,18 @@
             <div></div>
         </main>
         <footer>
-            <ul>
-                <li><a href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a></li>
-                <li><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
-            </ul>
+            <div class="footer-container">
+                <div class="author-credit">
+                    <p>&copy; Created by Kristian Colville</p>
+                </div>
+                <ul>
+                    <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li><a href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a></li>
+                    <li><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+
         </footer>
 
             <!-- font awesome script -->
