Add hidden welcome message and timer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="favicon.ico" rel="favicon">
         <link href="assets/css/style.css" rel="stylesheet">
-        <title>KC</title>
+        <title>Kristian Colville</title>
     </head>
     <body>
         <header>
@@ -14,8 +14,17 @@
             </nav>
         </header>
         <main id="landing-page">
-            <div></div>
-            <div></div>
+            <div id="inside-main">
+                <div class="container-row">
+                    <h1 id="welcome-ani">
+                        <span class="hidden-v">Welcome</span> 
+                        <span class="hidden-v">to</span> 
+                        <span class="hidden-v">my</span> 
+                        <span class="hidden-v">World</span>
+                    </h1>
+                </div>
+                <div></div>
+            </div>
         </main>
         <footer>
             <div class="footer-container">
@@ -34,5 +43,6 @@
 
             <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
     </body>
 </html>
