--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <main id="landing-page">
             <div id="inside-main">
                 <div class="container-row">
-                    <h1 id="welcome-ani">
-                        <span class="hidden-v">Welcome</span> 
-                        <span class="hidden-v">to</span> 
-                        <span class="hidden-v">my</span> 
-                        <span class="hidden-v">World</span>
+                    <h1 class="welcome-msg" class="hidden-v">
+                        <span class="msg-text hidden-v">Welcome</span> 
+                        <span class="msg-text hidden-v">to</span> 
+                        <span class="msg-text hidden-v">my</span> 
+                        <span class="msg-text hidden-v">World</span>
                     </h1>
                 </div>
                 <div></div>
