Add new content to nav list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <ul>
-                    <li>Link</li>
+                    <li>If your watching this something cool is about to happen soon</li>
                 </ul>
             </nav>
         </header>
