--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             </nav>
         </header>
         <main id="landing-page">
+            <div id="side-nav">
+                <ul>
+                    <li><i class="fa-solid fa-bomb"></i></li>
+                    <li><i class="fa-solid fa-floppy-disk"></i></li>
+                    <li><i class="fa-solid fa-ice-cream"></i></li>
+                    <li><i class="fa-solid fa-poo"></i></li>
+                    <li><i class="fa-solid fa-user-secret"></i></li>
+                </ul>
+            </div>
             <div id="inside-main">
                 <div class="container-row">
                     <h1 class="welcome-msg" class="hidden-v">
