Add animation and style basid side nav

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         </header>
         <main id="landing-page">
             <div id="side-nav">
-                <ul>
-                    <li><i class="fa-solid fa-bomb"></i></li>
-                    <li><i class="fa-solid fa-floppy-disk"></i></li>
-                    <li><i class="fa-solid fa-ice-cream"></i></li>
-                    <li><i class="fa-solid fa-poo"></i></li>
-                    <li><i class="fa-solid fa-user-secret"></i></li>
+                <ul id="side-nav-list">
+                    <li><i class="side-items fa-solid fa-bomb"></i></li>
+                    <li><i class="side-items fa-solid fa-floppy-disk"></i></li>
+                    <li><i class="side-items fa-solid fa-ice-cream"></i></li>
+                    <li><i class="side-items fa-solid fa-poo"></i></li>
+                    <li><i class="side-items fa-solid fa-user-secret"></i></li>
                 </ul>
             </div>
             <div id="inside-main">
