Add more structure to home page

--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li>If your watching this something cool is about to happen soon</li>
-                </ul>
-            </nav>
+            <h1 class="my-name">Kristian Colville</h1>
+            <ul id="about-me">
+                <li class="float-left">Full Stack Software Developer</li>
+                <li class="float-right">Artist</li>
+            </ul>
         </header>
         <main id="landing-page">
             <div id="side-nav">
                 <ul id="side-nav-list">
-                    <li><i class="side-items fa-solid fa-bomb"></i></li>
-                    <li><i class="side-items fa-solid fa-floppy-disk"></i></li>
+                    <li><i class="side-items fas fa-user"></i></li>
+                    <li><i class="side-items far fa-file"></i></li>
                     <li><i class="side-items fa-solid fa-ice-cream"></i></li>
-                    <li><i class="side-items fa-solid fa-poo"></i></li>
-                    <li><i class="side-items fa-solid fa-user-secret"></i></li>
                 </ul>
             </div>
             <div id="inside-main">
@@ -42,7 +40,6 @@
                 </div>
                 <ul>
                     <li><a href="#"><i class="fas fa-envelope"></i></a></li>
-                    <li><a href="https://stackoverflow.com"><i class="fab fa-stack-overflow"></i></a></li>
                     <li><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
