--- a/index.html
+++ b/index.html
@@ -2,46 +2,49 @@
 <html>
     <head>
         <link href="favicon.ico" rel="favicon">
-        <link href="assets/css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Kristian Colville</title>
     </head>
     <body>
         <header>
-            <h1 class="my-name">Kristian Colville</h1>
             <ul id="about-me">
-                <li class="float-left">Full Stack Software Developer</li>
+                <h1 class="my-name">Kristian Colville</h1>
+                <li class="float-left">Software Developer</li>
                 <li class="float-right">Artist</li>
             </ul>
         </header>
         <main id="landing-page">
-            <div id="side-nav">
-                <ul id="side-nav-list">
-                    <li><i class="side-items fas fa-user"></i></li>
-                    <li><i class="side-items far fa-file"></i></li>
-                    <li><i class="side-items fa-solid fa-ice-cream"></i></li>
-                </ul>
-            </div>
-            <div id="inside-main">
-                <div class="container-row">
-                    <h1 class="welcome-msg" class="hidden-v">
-                        <span class="msg-text hidden-v">Welcome</span> 
-                        <span class="msg-text hidden-v">to</span> 
-                        <span class="msg-text hidden-v">my</span> 
-                        <span class="msg-text hidden-v">World</span>
-                    </h1>
+            <div id="left-display">
+                <img src="assets/images/profile-image.jpg" class="profile-img" alt="profile image of Kristian Colville">
+
+                <div id="tool-list">
+                    <h2>Languages</h2>
+                    <ul>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg"></li>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg"></li>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"></li>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original-wordmark.svg"></li>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original-wordmark.svg"></li>
+                        <li><img class="tools" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/markdown/markdown-original.svg"></li>
+                    </ul>
                 </div>
-                <div></div>
+            </div>
+            <div id="middle-display">
+
+            </div>
+            <div id="right-display">
+
             </div>
         </main>
         <footer>
             <div class="footer-container">
                 <div class="author-credit">
-                    <p>&copy; Created by Kristian Colville</p>
+                    <p>&copy; Created by <span>Kristian Colville</span></p>
                 </div>
                 <ul>
-                    <li><a href="#"><i class="fas fa-envelope"></i></a></li>
-                    <li><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
+                    <li class="footer-links"><a href="#"><i class="fas fa-envelope"></i></a></li>
+                    <li class="footer-links"><a href="https://github.com/KristianColville1"><i class="fab fa-github"></i></a></li>
+                    <li class="footer-links"><a href="https://www.linkedin.com/in/kristian-colville-711727133/"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
@@ -49,6 +52,6 @@
 
             <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
-    <script src="assets/js/index.js"></script>
+    <!-- <script src="assets/js/index.js"></script> -->
     </body>
 </html>
